--- a/Invoices.Web.API/appsettings.json
+++ b/Invoices.Web.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\sqlexpress;Database=Invoices;Integrated Security=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
